--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,6 +30,14 @@
 				<li>Kingdom of the Stormlands</li>
 				<li>Kingdom of the Reach</li>
 				<li>Principality of Dorne</li>
+				
+				<li>Kingdom of the East!</li>
+				<li>Kingdom of the Mountain and the Vale!</li>
+				<li>Kingdom of the Isles and Rivers</li>
+				<li>Kingdom of the RANCHI</li>
+				<li>Kingdom of the SINGAPUR</li>
+				<li>Kingdom of the REPALLE</li>
+				<li>Principality of BAPATLA</li>
 			</ul>
 		</p>
 		<hr>
