--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,6 +38,14 @@
 				<li>Kingdom of the SINGAPUR</li>
 				<li>Kingdom of the REPALLE</li>
 				<li>Principality of BAPATLA</li>
+				
+				<li>Kingdom of the North!</li>
+				<li>Kingdom of the Mountain and the Vale!</li>
+				<li>Kingdom of the Isles and Rivers</li>
+				<li>Kingdom of the RANCHI</li>
+				<li>Kingdom of the SINGAPUR</li>
+				<li>Kingdom of the REPALLE</li>
+				<li>Principality of BAPATLA</li>
 			</ul>
 		</p>
 		<hr>
